--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <!--favicon links-->
+    <link rel="icon" type="image/png" sizes="48x48" href="assets/favicon/spade-48.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon/spade-96.png">
     <title>Black Jack</title>
 </head>
 
