added font and bg image. began styles for mobile hero page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
 </head>
 
 <body>
+    <header class="golden-text">Black Jacks' Casino</header>
+    <div class=card-wrapper>
+        <img src="assets/images/cards/K-S.png" alt="king of spades" width="33%">
+        <img src="assets/images/cards/A-S.png" alt="king of spades" width="33%">
+    </div>
+    <div class="enter-play-wrapper">
+        <a href="game.html" aria-label="Go to game page">
+            <p class="enter">Enter</p>
+        </a>
+        <a href="game.html" aria-label="How to play">
+            <p class="enter">How to play</p>
+        </a>
+    </div>
 
     <script src="assets/js/script.js"></script>
 </body>
