added stylings to hero text

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p class="enter">Enter</p>
         </a>
         <a href="game.html" aria-label="How to play">
-            <p class="enter">How to play</p>
+            <p class="how-to">How to play</p>
         </a>
     </div>
 
