added styles to enter and 'how to play'

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
     <header class="golden-text">Black Jacks' Casino</header>
     <div class=card-wrapper>
-        <img src="assets/images/cards/K-S.png" alt="king of spades" width="33%">
-        <img src="assets/images/cards/A-S.png" alt="king of spades" width="33%">
+        <img class="card-size" src="assets/images/cards/K-S.png" alt="king of spades">
+        <img class="card-size" src="assets/images/cards/A-S.png" alt="king of spades">
     </div>
     <div class="enter-play-wrapper">
         <a href="game.html" aria-label="Go to game page">
