added media queries for card size 768px 1080px

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="golden-text">Black Jacks' Casino</header>
     <div class=card-wrapper>
         <img class="card-size" src="assets/images/cards/K-S.png" alt="king of spades">
-        <img class="card-size" src="assets/images/cards/A-S.png" alt="king of spades">
+        <img class="card-size" src="assets/images/cards/A-S.png" alt="ace of spades">
     </div>
     <div class="enter-play-wrapper">
         <a href="game.html" aria-label="Go to game page">
