--- a/index.html
+++ b/index.html
@@ -21,9 +21,21 @@
         <a href="game.html" aria-label="Go to game page">
             <p class="enter">Enter</p>
         </a>
-        <a href="game.html" aria-label="How to play">
-            <p class="how-to">How to play</p>
-        </a>
+        <!--trigger modal-->
+        <p id="open-modal" class="how-to">How to play</p>
+        <!--the modal-->
+        <div id="how-to-play" class="modal-hero">
+            <div class="modal-instructions">
+                <p>Get a hand that adds to 21 or as close as possible</p>
+                <p>Start with two cards</p>
+                <p>Choose to draw another card or, if you have 15 plus</p>
+                <p>Choose to stay</p>
+                <p>Picture cards are worth 10 & Aces 1 or 11</p>
+                <p>If you go over 21, you are bust</p>
+                <p>In a tie, banker always wins</p>
+            </div>
+        </div>
+
     </div>
 
     <script src="assets/js/script.js"></script>
