--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p class="enter">Enter</p>
         </a>
         <!--trigger modal-->
-        <p id="open-modal" class="how-to">How to play</p>
+        <p class="how-to" onclick="modal()" aria-label="open intructions">How to play</p>
         <!--the modal-->
         <div id="how-to-play" class="modal-hero">
             <div class="modal-instructions">
@@ -33,6 +33,7 @@
                 <p>Picture cards are worth 10 & Aces 1 or 11</p>
                 <p>If you go over 21, you are bust</p>
                 <p>In a tie, banker always wins</p>
+                <button class="close-modal" onclick="closeModal()" aria-label="close insructions">Close</button>
             </div>
         </div>
 
