created function to assemble card deck and load it in memory

--- a/game.html
+++ b/game.html
@@ -27,8 +27,8 @@
     </div>
 
     <!--Win / Lose notification-->
-    <div id="win-lose" class="win-lose-area">
-        <p>You won!</p>
+    <div class="win-lose-area">
+        <p id="win-lose">You won!</p>
     </div>
 
     <!--Dealer Area-->
