--- a/game.html
+++ b/game.html
@@ -34,10 +34,10 @@
     <!--Dealer Area-->
     <div id="dealer-cards" class="dealer-card-wrapper">
         <img id="dealer-card-1" class="card-size" src="assets/images/cards/BACK.png" alt="king of spades">
-        <img id="dealer-card-2" class="card-size" src="assets/images/cards/A-S.png" alt="ace of spades">
     </div>
-    <div class="dealer-button">
-        <button id="dealer-play" aria-label="Dealer">Dealer</button>
+
+    <div class="dealer-window">
+        <p id="dealer-hand" class="dealer-play" aria-label="Dealer">Dealer</p>
     </div>
 
     <!--Player area-->
