--- a/game.html
+++ b/game.html
@@ -46,7 +46,7 @@
         <img id="player-card-2" class="card-size" src="assets/images/cards/A-S.png" alt="ace of spades">
     </div>
     <div class="player-button">
-        <button id="player-play" aria-label="player">Hit me!</button>
+        <button id="player-play" aria-label="player">Hit!</button>
     </div>
     <div class="options">
         <button id="stay" class="player-options" aria-label="Stay">Stay</button>
