Revert "small changes to html"
This reverts commit 268eff39010888e9ab78e08f95232492bdb84ae3.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="modal-instructions">
                 <p>Get a hand that adds to 21 or as close as possible</p>
                 <p>Start with two cards</p>
-                <p>'Hit' to draw another card or, if you have 15 plus</p>
+                <p>Choose to draw another card or, if you have 15 plus</p>
                 <p>Choose to stay</p>
                 <p>Picture cards are worth 10 & Aces 1 or 11</p>
                 <p>If you go over 21, you are bust</p>
