added seperate background image for hero page & an overlay. adjust stylings for responsivity

--- a/game.html
+++ b/game.html
@@ -11,7 +11,7 @@
     <title>Black Jack</title>
 </head>
 
-<body>
+<body id="green-table">
     <!-- logo header -->
     <header>
         <h1 class="logo">Black Jacks' Casino</h1>
@@ -33,7 +33,7 @@
 
     <!--Dealer Area-->
     <div id="dealer-cards" class="dealer-card-wrapper">
-        <img id="dealer-card-1" class="card-size" src="assets/images/cards/BACK.png" alt="king of spades">
+        <img id="dealer-card-1" class="card-size" src="assets/images/cards/BACK.png">
     </div>
 
     <div class="dealer-window">
