added deal cards to player and player current score. changed dealer play from auto on load and added display dealer score.

--- a/game.html
+++ b/game.html
@@ -37,16 +37,14 @@
     </div>
 
     <div class="dealer-window">
-        <p id="dealer-hand" class="dealer-play" aria-label="Dealer">Dealer</p>
+        <p id="dealer-score" class="dealer-play" onclick=dealerTurn() aria-label="Dealer Score">Dealer:0</p>
     </div>
 
     <!--Player area-->
     <div id="player-cards" class="player-card-wrapper">
-        <img id="player-card-1" class="card-size" src="assets/images/cards/BACK.png" alt="king of spades">
-        <img id="player-card-2" class="card-size" src="assets/images/cards/A-S.png" alt="ace of spades">
     </div>
     <div class="player-button">
-        <button id="player-play" aria-label="player">Hit!</button>
+        <button id="player-play" aria-label="player get card">Player:0</button>
     </div>
     <div class="options">
         <button id="stay" class="player-options" aria-label="Stay">Stay</button>
