added win / lose box for game results. fixed issue with player still getting a card after 'stay'

--- a/game.html
+++ b/game.html
@@ -28,7 +28,7 @@
 
     <!--Win / Lose notification-->
     <div class="win-lose-area">
-        <p id="win-lose">You won!</p>
+        <p id="win-lose">Good Luck!</p>
     </div>
 
     <!--Dealer Area-->
@@ -37,7 +37,7 @@
     </div>
 
     <div class="dealer-window">
-        <p id="dealer-score" class="dealer-play" onclick=dealerTurn() aria-label="Dealer Score">Dealer:0</p>
+        <p id="dealer-score" class="dealer-play" onclick=dealerTurn() aria-label="Dealer Score">Dealer:</p>
     </div>
 
     <!--Player area-->
