--- a/index.html
+++ b/index.html
@@ -28,13 +28,11 @@
             <div id="how-to-play" class="modal-hero">
                 <div class="modal-instructions">
                     <p>Get to 21</p>
-                    <p>Or as close as you dare</p>
-                    <p>Start with two cards</p>
-                    <p>Draw another card or Stay</p>
-                    <p>J,Q & K are worth 10</p>
-                    <p> & Aces 1 or 11</p>
-                    <p>If you go over 21, you are bust</p>
-                    <p>In a tie, banker always wins</p>
+                    <p><em>'Or as close as you dare'</em></p>
+                    <p>If you go over 21, you are 'Bust'</p>
+                    <p>Click 'Player' to draw a card</p>
+                    <p>Click 'Stay' to hold</p>
+                    <p>Click 'Dealer' for opponent play</p>
                     <button class="close-modal" onclick="closeModal()" aria-label="close insructions">Close</button>
                 </div>
             </div>
