--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Cards, Game, BlackJack,">
+    <meta name="keywords" content="Gambling, Cards, BlackJack, Online,">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <!--favicon links-->
     <link rel="icon" type="image/png" sizes="48x48" href="assets/favicon/spade-48.png">
