fixed minor errors in syntax for html, css and JS as flagged by w3schools validation and JShint

--- a/game.html
+++ b/game.html
@@ -27,7 +27,7 @@
 
     <!--Dealer Area-->
     <div id="dealer-cards" class="dealer-card-wrapper">
-        <img id="dealer-card-1" class="card-size" src="assets/images/cards/BACK.webp">
+        <img id="dealer-card-1" class="card-size" src="assets/images/cards/BACK.webp" alt="Back of dealers hidden card">
     </div>
 
     <div class="dealer-window">
@@ -42,8 +42,7 @@
     </div>
     <div class="options">
         <button id="stay" class="player-options" aria-label="Stay">Stay</button>
-
-        <button id="new-game" class="player-options" aria-label="next game">Next Game</button>
+        <button class="player-options" onclick="window.location.reload(true)" aria-label="next game">Next Game</button>
     </div>
 
 
