--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <p class="enter">Enter</p>
             </a>
             <!--trigger modal-->
-            <p class="how-to" onclick="modal()" aria-label="open intructions">How to play</p>
+            <p class="how-to" onclick="modal()">How to play</p>
             <!--the modal-->
             <div id="how-to-play" class="modal-hero">
                 <div class="modal-instructions">
