minor adjustments to alt descriptions of images for accessibilty

--- a/game.html
+++ b/game.html
@@ -27,7 +27,7 @@
 
     <!--Dealer Area-->
     <div id="dealer-cards" class="dealer-card-wrapper">
-        <img id="dealer-card-1" class="card-size" src="assets/images/cards/BACK.webp" alt="Back of dealers hidden card">
+        <img alt="Back of dealers hidden card" id="dealer-card-1" class="card-size" src="assets/images/cards/BACK.webp">
     </div>
 
     <div class="dealer-window">
