--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <main class="overlay">
         <header class="golden-text">Black Jacks' Casino</header>
         <div class=card-wrapper>
-            <img class="card-size" src="assets/images/cards/J-S.webp" alt="king of spades">
-            <img class="card-size" src="assets/images/cards/A-S.webp" alt="ace of spades">
+            <img alt="picture of a playing card king of spades" class="card-size" src="assets/images/cards/J-S.webp">
+            <img alt=" picture of a playing card ace of spades" class="card-size" src="assets/images/cards/A-S.webp">
         </div>
         <div class="enter-play-wrapper">
             <a href="game.html" aria-label="Go to game page">
