replaced window alerts with alerts to the win/lose area. adjust font size for alert and font size for win / lose

--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
             <div id="how-to-play" class="modal-hero">
                 <div class="modal-instructions">
                     <p>Get to 21</p>
-                    <p><em>'Or as close as you dare'</em></p>
                     <p>If you go over 21, you are 'Bust'</p>
-                    <p>Click 'Player' to draw a card</p>
-                    <p>Click 'Stay' to hold</p>
+                    <p>Click 'Draw' to draw a card or </p>
+                    <p>Click 'Stay' to hold if you have 15 plus</p>
                     <p>Click 'Dealer' for opponent play</p>
                     <button class="close-modal" onclick="closeModal()" aria-label="close insructions">Close</button>
                 </div>
